--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My GitHub Page</title>
 </head>
 <body>
-    <h1>Hi Bujji</h1>
-    <p>This is your Potti</p>
+    <h1><center>Hi Paapu</center></h1>
+    <h2><center>This is your Potti</center></h2>
+    <h4><center>Hey younman sweet memory is waiting here....<a href="w1.html">Taste the Sweet</a></center></h4>
 </body>
 </html>
